// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delegates number parsing 1`] = `
[
  {
    "type": "variable",
    "value": "a",
  },
  {
    "children": EmalNumber {
      "decimalPlace": 3n,
      "rawInt": -25n,
    },
    "type": "number",
    "value": "",
  },
  {
    "type": "operator",
    "value": "*",
  },
]
`;

exports[`distinguishes number comma and argument separator 1`] = `
[
  {
    "children": EmalNumber {
      "decimalPlace": 1n,
      "rawInt": 25n,
    },
    "type": "number",
    "value": "",
  },
  {
    "type": "variable",
    "value": "a",
  },
  {
    "type": "variable",
    "value": "b",
  },
  {
    "type": "function",
    "value": "max",
  },
  {
    "type": "operator",
    "value": "*",
  },
]
`;

exports[`tokenizes function 1`] = `
[
  {
    "type": "variable",
    "value": "cH3O",
  },
  {
    "type": "function",
    "value": "log",
  },
]
`;

exports[`tokenizes in RPN 1`] = `
[
  {
    "type": "variable",
    "value": "a",
  },
  {
    "type": "variable",
    "value": "b",
  },
  {
    "type": "variable",
    "value": "a",
  },
  {
    "type": "operator",
    "value": "*",
  },
  {
    "type": "variable",
    "value": "a",
  },
  {
    "type": "variable",
    "value": "b",
  },
  {
    "type": "operator",
    "value": "-",
  },
  {
    "type": "operator",
    "value": "+",
  },
  {
    "type": "operator",
    "value": "+",
  },
]
`;

exports[`tokenizes simple expression 1`] = `
[
  {
    "type": "variable",
    "value": "a",
  },
  {
    "type": "variable",
    "value": "b",
  },
  {
    "type": "operator",
    "value": "+",
  },
]
`;
